# zundamon

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: main.yml
core/: Cargo.toml
core/src/: commands.rs  config.rs  event_handler.rs  log.rs  main.rs  opt.rs  synthesis.rs  type_map.rs
core/src/commands/: dictionary.rs  join.rs  leave.rs  log.rs  speaker.rs  status.rs
core/src/commands/dictionary/: add.rs  export.rs  import.rs  remove.rs  reset.rs  search.rs
dictionary/: Cargo.toml
dictionary/src/: eng_dic.rs  lib.rs  util.rs
src/: commands.rs  config.rs  dictionary.rs  event_handler.rs  log.rs  main.rs  synthesis.rs  type_map.rs
src/commands/: autojoin.rs  dictionary.rs  join.rs  leave.rs  skip.rs  time_signal.rs  version.rs
src/commands/dictionary/: add.rs  export.rs  import.rs  list.rs  remove.rs  reset.rs  search.rs  update.rs
