[package]
name = "zundamon"
version = "0.1.2"
edition = "2021"

[dependencies]
hound = "3.5.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "model", "cache", "rustls_backend", "gateway", "voice-model"] }
songbird = { version = "0.3.2", features = ["builtin-queue"] }
tokio = { version = "1.28.0", features = ["full"] }
vvcore = "0.0.2"
