[package]
name = "zundamon"
version = "0.1.4"
edition = "2021"

[dependencies]
aho-corasick = "1.0.2"
anyhow = "1.0.71"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
deunicode = "1.3.3"
duct = "0.13.6"
hound = "3.5.0"
once_cell = "1.17.1"
regex = "1.8.1"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
songbird = { version = "0.3.2", features = ["builtin-queue"] }
strip-ansi-escapes = "0.1.1"
structopt = "0.3.26"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry"] }
unic-emoji-char = "0.9.0"
vvcore = "0.0.2"
walkdir = "2.3.3"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "client",
    "model",
    "cache",
    "rustls_backend",
    "gateway",
    "voice-model",
    "collector"
]
