[package]
name = "zundamon"
version = "0.3.0"
edition = "2021"

[dependencies]
dictionary = { path = "../dictionary" }
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
reqwest = "0.11.17"
songbird = { version = "0.3.2", features = ["builtin-queue"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "json", "time", "env-filter"] }
vvcore = "0.0.2"
chrono-tz = "0.8.3"
time = { version = "0.3.23", features = ["macros"] }
structopt = "0.3.26"
wav = "1.0.0"
byteorder = "1.4.3"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "client",
    "model",
    "cache",
    "rustls_backend",
    "gateway",
    "voice-model",
    "collector"
]
