[package]
name = "dictionary"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aho-corasick = "1.0.2"
deunicode = "1.3.3"
unic-emoji-char = "0.9.0"
kanaria = "0.2.0"
csv = "1.2.2"
maplit = "1.0.2"
wana_kana = "3.0.0"
