[package]
name = "dictionary"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aho-corasick = "1.0.4"
kanaria = "0.2.0"
csv = "1.2.2"
maplit = "1.0.2"
wana_kana = "3.0.0"
any_ascii = "0.3.2"
unicode-segmentation = "1.10.1"
